# samplerack

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: main.yaml
docs/: ARCHITECTURE.md  ROADMAP.md
docs/AREAS/: linear.md  rubato_backend.md  sinc.md
docs/DECISIONS/: 0001-resampler-contract-and-fft-free-distillation.md  0002-optional-std-rubato-backend.md  0003-per-backend-feature-gating.md
src/: internals.rs  lib.rs  linear.rs  resampler.rs  rubato_backend.rs  sinc.rs
tests/: heavy_downsample_regression.rs  rubato_regression.rs
