[package]
name = "samplerack"
description = "Sample-rate conversion (resampling) for the q-lib audio engine."
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/QsKue/samplerack"
readme = "README.md"

[dependencies]
sinerack = { git = "https://github.com/QsKue/sinerack" }

# Standalone, independently-buildable crate, also checked out inside the q-lib
# workspace where it is consumed via a `[patch]` path redirect. `[workspace]`
# keeps Cargo from absorbing it as a member (a patch target cannot be a member).
[workspace]
