[package]
name = "samplerack"
description = "Sample-rate conversion (resampling) for the q-lib audio engine."
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/QsKue/samplerack"
readme = "README.md"

[features]
# Per-backend opt-in (mirrors pitchrack ADR 0007 / phaserack). The default gives only
# the `Resampler` trait + `NoopResampler` (pass-through) — if you need no conversion you
# need no backend. Each real backend is its own feature:
#   linear  — FFT-free linear interpolation (cheap, no anti-alias). Dependency-free.
#   sinc    — FFT-free windowed-sinc polyphase (anti-aliased). Dependency-free; no_std-candidate.
#   rubato  — std, high-fidelity 128-tap rubato wrapper (pulls rubato -> rustfft).
# `linear`/`sinc` share the internal `InputHistory`; both stay FFT-free so the default
# and any FFT-free subset remain `rustfft`-free.
default = []
linear = []
sinc = []
rubato = ["dep:rubato", "dep:audioadapter-buffers"]

[dependencies]
sinerack = { git = "https://github.com/QsKue/sinerack" }
rubato = { version = "2.0.0", optional = true }
audioadapter-buffers = { version = "3.0.0", optional = true }

# Standalone, independently-buildable crate, also checked out inside the q-lib
# workspace where it is consumed via a `[patch]` path redirect. `[workspace]`
# keeps Cargo from absorbing it as a member (a patch target cannot be a member).
[workspace]
